--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,3 +33,4 @@ error.500.title=Internal Server Error
 error.500.message=Something went wrong on the server.
 error.default.title=Error
 error.default.message=An unexpected error occurred.
+error.default.backHome_en=Back to Home
