Registration is working

--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,11 +1,31 @@
-# Sign in page
+# Сторінка входу / реєстрації
 sign.in.title=Вхід до системи
-sign.in.header=Будь ласка, увійдіть
-username.label=Ваш логін
-password.label=Пароль
-button.submit=Увійти
+sign.in.header=Авторизація
+sign.up.title=Реєстрація
+sign.up.header=Реєстрація
 
-# Dashboard
+username.label=Ваш логін
+email.label=Електронна пошта
+password.label=Пароль
+password.confirm.label=Підтвердіть пароль
+role.label=Роль
+role.user=Користувач
+role.manager=Менеджер
+role.admin=Адміністратор
+phonenumber.label=Номер телефону
+phone.required=Номер телефону є обов’язковим
+phone.invalid=Невірний формат номеру телефону
+
+button.submit=Увійти
+button.register=Зареєструватися
+button.home=Головна
+
+username.exists=Логін вже зайнятий
+email.exists=Електронна пошта вже використовується
+password.mismatch=Паролі не співпадають
+phone.exists=Номер телефону вже використовується
+
+# Панель керування
 dashboard.title=Панель керування
 dashboard.nav.brand=Панель керування
 dashboard.header=Панель керування
@@ -15,7 +35,7 @@ voucher.table.description=Опис
 voucher.table.action=Дія
 button.order=Замовити
 
-# Index page
+# Головна сторінка
 index.title=Тревел Агенція
 index.nav.brand=Тревел Агенція
 index.nav.home=Головна
@@ -24,14 +44,13 @@ index.nav.sign.up=Реєстрація
 index.header=Вітаємо у нашій Тревел Агенції!
 index.description=Відкрийте для себе неймовірні подорожі та розпочніть свою пригоду сьогодні.
 
-# Error
+# Сторінки помилок
 error.404.title=Сторінку не знайдено
 error.404.message=На жаль, запитана сторінка не існує або була переміщена.
-error.500.title=Внутрішня помилка сервера
-error.500.message=Щось пішло не так на сервері.
 error.403.title=Доступ заборонено
 error.403.message=У вас немає дозволу для перегляду цієї сторінки.
+error.500.title=Внутрішня помилка сервера
+error.500.message=Щось пішло не так на сервері.
 error.default.title=Помилка
 error.default.message=Сталася несподівана помилка. Спробуйте ще раз пізніше.
 error.default.backHome=Повернутись на головну
-
