--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,29 @@
-# Sign in page
+# Sign in / up page
 sign.in.title=Login Page
 sign.in.header=Sign In
+sign.up.title=Sign Up
+sign.up.header=Sign Up
+
 username.label=Username
+email.label=Email
 password.label=Password
+password.confirm.label=Confirm Password
+role.label=Role
+role.user=User
+role.manager=Manager
+role.admin=Admin
+phonenumber.label=Phone Number
+phone.required=Phone number is required
+phone.invalid=Invalid phone number format
+
 button.submit=Submit
+button.register=Register
+button.home=Home
+
+username.exists=Username is already taken
+email.exists=Email is already taken
+password.mismatch=Passwords do not match
+phone.exists=Phone number is already taken
 
 # Dashboard
 dashboard.title=Dashboard
@@ -33,4 +53,4 @@ error.500.title=Internal Server Error
 error.500.message=Something went wrong on the server.
 error.default.title=Error
 error.default.message=An unexpected error occurred.
-error.default.backHome_en=Back to Home
+error.default.backHome=Back to Home
