DB errors, Voucher functionality

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,35 @@
-# Sign in / up page
-sign.in.title=Login Page
+# Buttons
 sign.in.header=Sign In
-sign.up.title=Sign Up
 sign.up.header=Sign Up
+button.signin=Sign In
+button.signup=Sign Up
+button.profile=My Profile
+button.logout=Logout
+button.getStarted=Get Started
+button.viewProfile=View Profile
+button.language=Language
+button.lang.en=EN
+button.lang.uk=UK
+button.order=Purchase Voucher
 
+# Table labels for user info
+profile.table.username=Username
+profile.table.email=Email
+profile.table.phone=Phone
+profile.table.role=Role
+profile.table.balance=Balance
+
+# Orders section
+profile.header=My profile
+profile.orders.header=My Orders
+profile.orders.id=Order ID
+profile.orders.voucherTitle=Voucher
+profile.orders.date=Date
+profile.orders.status=Status
+profile.orders.total=Total Price
+
+
+# Form labels & validation
 username.label=Username
 email.label=Email
 password.label=Password
@@ -11,38 +37,39 @@ password.confirm.label=Confirm Password
 role.label=Role
 role.user=User
 role.manager=Manager
-role.admin=Admin
+role.admin=Administrator
 phonenumber.label=Phone Number
-phone.required=Phone number is required
-phone.invalid=Invalid phone number format
-
+phone.required=Phone number is required.
+phone.invalid=Invalid phone number format.
 button.submit=Submit
 button.register=Register
 button.home=Home
 
-username.exists=Username is already taken
-email.exists=Email is already taken
-password.mismatch=Passwords do not match
-phone.exists=Phone number is already taken
+# Business errors
+username.exists=Username is already taken.
+email.exists=Email is already registered.
+password.mismatch=Passwords do not match.
+phone.exists=Phone number is already in use.
 
 # Dashboard
 dashboard.title=Dashboard
-dashboard.nav.brand=Dashboard
+dashboard.nav.brand=Travel Agency
 dashboard.header=Dashboard
 voucher.table.id=ID
-voucher.table.title=Title
+voucher.table.title=Voucher Title
 voucher.table.description=Description
 voucher.table.action=Action
-button.order=Order
+voucher.sample.title=Featured Voucher
+voucher.sample.description=Discover exclusive offers and unique experiences.
 
-# Index page
-index.title=Travel Agency
+# Index / Home
 index.nav.brand=Travel Agency
 index.nav.home=Home
-index.nav.sign.in=Sign In
-index.nav.sign.up=Sign Up
-index.header=Welcome to our Travel Agency!
-index.description=Discover incredible trips and start your journey today.
+home.title=Travel Agency Beyond the Horizon!
+home.nav.brand=Travel Agency
+home.nav.home=Home
+home.header=Welcome to Our Travel Agency Beyond the Horizon!
+home.description=Explore incredible journeys and start your adventure today.
 
 # Error pages
 error.404.title=Page Not Found
@@ -50,7 +77,7 @@ error.404.message=Sorry, the page you are looking for does not exist.
 error.403.title=Access Denied
 error.403.message=You do not have permission to access this page.
 error.500.title=Internal Server Error
-error.500.message=Something went wrong on the server.
+error.500.message=Oops! Something went wrong on our end.
 error.default.title=Error
-error.default.message=An unexpected error occurred.
+error.default.message=An unexpected error occurred. Please try again later.
 error.default.backHome=Back to Home
