--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,10 +1,19 @@
-# Сторінка входу / реєстрації
-sign.in.title=Вхід до системи
+# Кнопки
 sign.in.header=Авторизація
-sign.up.title=Реєстрація
 sign.up.header=Реєстрація
+button.signin=Увійти
+button.signup=Зареєструватися
+button.profile=Мій профіль
+button.logout=Вихід
+button.getStarted=Почати
+button.viewProfile=Переглянути профіль
+button.language=Мова
+button.lang.en=EN
+button.lang.uk=UK
+button.order=Замовити ваучер
 
-username.label=Ваш логін
+# Підписи форм і валідація
+username.label=Логін
 email.label=Електронна пошта
 password.label=Пароль
 password.confirm.label=Підтвердіть пароль
@@ -13,36 +22,54 @@ role.user=Користувач
 role.manager=Менеджер
 role.admin=Адміністратор
 phonenumber.label=Номер телефону
-phone.required=Номер телефону є обов’язковим
-phone.invalid=Невірний формат номеру телефону
-
-button.submit=Увійти
+phone.required=Номер телефону є обов’язковим.
+phone.invalid=Невірний формат номеру телефону.
+button.submit=Надіслати
 button.register=Зареєструватися
 button.home=Головна
 
-username.exists=Логін вже зайнятий
-email.exists=Електронна пошта вже використовується
-password.mismatch=Паролі не співпадають
-phone.exists=Номер телефону вже використовується
+# Підписи таблиці з інформацією про користувача
+profile.header=Мій профіль
+profile.table.username=Логін
+profile.table.email=Електронна пошта
+profile.table.phone=Номер телефону
+profile.table.role=Роль
+profile.table.balance=Баланс
+
+# Розділ замовлень
+profile.orders.header=Мої замовлення
+profile.orders.id=ID замовлення
+profile.orders.voucherTitle=Ваучер
+profile.orders.date=Дата
+profile.orders.status=Статус
+profile.orders.total=Загальна сума
+
+
+# Бізнес-валидація
+username.exists=Логін вже зайнятий.
+email.exists=Електронна пошта вже використовується.
+password.mismatch=Паролі не співпадають.
+phone.exists=Номер телефону вже використовується.
 
 # Панель керування
-dashboard.title=Панель керування
+dashboard.title=Тревел Агенція
 dashboard.nav.brand=Панель керування
 dashboard.header=Панель керування
 voucher.table.id=ID
 voucher.table.title=Назва ваучера
 voucher.table.description=Опис
 voucher.table.action=Дія
-button.order=Замовити
+voucher.sample.title=Рекомендований ваучер
+voucher.sample.description=Відкрийте для себе унікальні пропозиції та незабутні враження.
 
 # Головна сторінка
-index.title=Тревел Агенція
 index.nav.brand=Тревел Агенція
 index.nav.home=Головна
-index.nav.sign.in=Вхід
-index.nav.sign.up=Реєстрація
-index.header=Вітаємо у нашій Тревел Агенції!
-index.description=Відкрийте для себе неймовірні подорожі та розпочніть свою пригоду сьогодні.
+home.title=Тревел Агенція Світ за горизонтом!
+home.nav.brand=Тревел Агенція
+home.nav.home=Головна
+home.header=Вітаємо у нашій Тревел Агенції Світ за горизонтом!
+home.description=Відкрийте для себе неймовірні подорожі та розпочніть свою пригоду сьогодні.
 
 # Сторінки помилок
 error.404.title=Сторінку не знайдено
@@ -50,7 +77,7 @@ error.404.message=На жаль, запитана сторінка не існу
 error.403.title=Доступ заборонено
 error.403.message=У вас немає дозволу для перегляду цієї сторінки.
 error.500.title=Внутрішня помилка сервера
-error.500.message=Щось пішло не так на сервері.
+error.500.message=Щось пішло не так на нашому сервері.
 error.default.title=Помилка
-error.default.message=Сталася несподівана помилка. Спробуйте ще раз пізніше.
+error.default.message=Сталася несподівана помилка. Будь ласка, спробуйте пізніше.
 error.default.backHome=Повернутись на головну
