DB errors fixed, SQL fixed, Sign-in.html minor changes (add Register button).

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,7 @@
 # Buttons
+sign.in.title=Sign In
 sign.in.header=Sign In
+sign.up.title=Sign Up
 sign.up.header=Sign Up
 button.signin=Sign In
 button.signup=Sign Up
@@ -20,6 +22,7 @@ profile.table.role=Role
 profile.table.balance=Balance
 
 # Orders section
+profile.title=My profile
 profile.header=My profile
 profile.orders.header=My Orders
 profile.orders.id=Order ID
