--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,5 +1,7 @@
 # Кнопки
+sign.in.title=Авторизація
 sign.in.header=Авторизація
+sign.up.title=Реєстрація
 sign.up.header=Реєстрація
 button.signin=Увійти
 button.signup=Зареєструватися
@@ -29,6 +31,7 @@ button.register=Зареєструватися
 button.home=Головна
 
 # Підписи таблиці з інформацією про користувача
+profile.title=Мій профіль
 profile.header=Мій профіль
 profile.table.username=Логін
 profile.table.email=Електронна пошта
