SignUp + name / surname; isHot status for vouchers + hotSort; +Filter(single function); voucher_orders DB H2; Profile improvements(Balance editor, voucher_orders with status, name / surname); arrival / eviction dates (registration period ended based on those);
new lang massages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,11 +8,13 @@ button.signup=Sign Up
 button.profile=My Profile
 button.logout=Logout
 button.getStarted=Get Started
+button.review=Review
 button.viewProfile=View Profile
 button.language=Language
 button.lang.en=EN
 button.lang.uk=UK
-button.order=Purchase Voucher
+button.myProfile=My Profile
+
 
 # Table labels for user info
 profile.table.username=Username
@@ -20,6 +22,57 @@ profile.table.email=Email
 profile.table.phone=Phone
 profile.table.role=Role
 profile.table.balance=Balance
+
+# Voucher Filter Form
+voucher.filter.header=Filter Vouchers
+voucher.filter.tourType=Tour Type
+voucher.filter.transferType=Transfer Type
+voucher.filter.price=Price ($)
+voucher.filter.hotelType=Hotel Type
+voucher.filter.all=All
+voucher.filter.button=Filter
+
+voucher.label.hotel=Hotel:
+voucher.label.transfer=Transfer:
+voucher.label.tour=Tour:
+voucher.hot.badge=Hot
+
+# Voucher Card Buttons
+button.view=Review
+button.order=Order
+button.notAvailable=Registration period ended
+
+
+
+# Tour Types
+tourType.HEALTH=Health
+tourType.SPORTS=Sports
+tourType.LEISURE=Leisure
+tourType.SAFARI=Safari
+tourType.WINE=Wine
+tourType.ECO=Eco
+tourType.ADVENTURE=Adventure
+tourType.CULTURAL=Cultural
+
+
+# Transfer Types
+transferType.BUS=Bus
+transferType.TRAIN=Train
+transferType.PLANE=Plane
+transferType.SHIP=Ship
+transferType.PRIVATE_CAR=Private Car
+transferType.JEEPS=Jeep
+transferType.MINIBUS=Minibus
+transferType.ELECTRICAL_CARS=Electrical Cars
+
+
+# Hotel Types
+hotelType.ONE_STAR=One Star
+hotelType.TWO_STARS=Two Stars
+hotelType.THREE_STARS=Three Stars
+hotelType.FOUR_STARS=Four Stars
+hotelType.FIVE_STARS=Five Stars
+
 
 # Orders section
 profile.title=My profile
@@ -30,7 +83,6 @@ profile.orders.voucherTitle=Voucher
 profile.orders.date=Date
 profile.orders.status=Status
 profile.orders.total=Total Price
-
 
 # Form labels & validation
 username.label=Username
@@ -53,18 +105,23 @@ username.exists=Username is already taken.
 email.exists=Email is already registered.
 password.mismatch=Passwords do not match.
 phone.exists=Phone number is already in use.
+voucher.arrival=Arrival:
+voucher.eviction=Eviction:
 
 # Dashboard
-dashboard.title=Dashboard
+dashboard.title=Travel Agency
 dashboard.nav.brand=Travel Agency
-dashboard.header=Dashboard
+dashboard.header=Travel Agency
 voucher.table.id=ID
 voucher.table.title=Voucher Title
 voucher.table.description=Description
 voucher.table.action=Action
 voucher.sample.title=Featured Voucher
 voucher.sample.description=Discover exclusive offers and unique experiences.
-
+profile.edit.header=Edit Your Details
+profile.firstName=First Name
+profile.lastName=Last Name
+button.updateProfile=Update Profile
 # Index / Home
 index.nav.brand=Travel Agency
 index.nav.home=Home
@@ -84,3 +141,7 @@ error.500.message=Oops! Something went wrong on our end.
 error.default.title=Error
 error.default.message=An unexpected error occurred. Please try again later.
 error.default.backHome=Back to Home
+
+# Voucher Catalog
+voucher.catalog.header=Available Vouchers
+voucher.catalog.empty=No vouchers available at the moment.
