--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -8,27 +8,12 @@ button.signup=Зареєструватися
 button.profile=Мій профіль
 button.logout=Вихід
 button.getStarted=Почати
+button.review=Переглянути
 button.viewProfile=Переглянути профіль
 button.language=Мова
 button.lang.en=EN
 button.lang.uk=UK
-button.order=Замовити ваучер
-
-# Підписи форм і валідація
-username.label=Логін
-email.label=Електронна пошта
-password.label=Пароль
-password.confirm.label=Підтвердіть пароль
-role.label=Роль
-role.user=Користувач
-role.manager=Менеджер
-role.admin=Адміністратор
-phonenumber.label=Номер телефону
-phone.required=Номер телефону є обов’язковим.
-phone.invalid=Невірний формат номеру телефону.
-button.submit=Надіслати
-button.register=Зареєструватися
-button.home=Головна
+button.myProfile=Мій профіль
 
 # Підписи таблиці з інформацією про користувача
 profile.title=Мій профіль
@@ -47,13 +32,77 @@ profile.orders.date=Дата
 profile.orders.status=Статус
 profile.orders.total=Загальна сума
 
+# Форма фільтрації ваучерів
+voucher.filter.header=Фільтр Ваучерів
+voucher.filter.tourType=Тип туру
+voucher.filter.transferType=Тип трансферу
+voucher.filter.price=Ціна ($)
+voucher.filter.hotelType=Тип готелю
+voucher.filter.all=Всі
+voucher.filter.button=Фільтрувати
+
+# Кнопки на картках ваучерів
+button.view=Переглянути
+button.order=Замовити
+button.notAvailable=Реєстрацію завершено
+
+# Типи готелів
+hotelType.ONE_STAR=Однозірковий
+hotelType.TWO_STARS=Двозірковий
+hotelType.THREE_STARS=Трьохзірковий
+hotelType.FOUR_STARS=Чотиризірковий
+hotelType.FIVE_STARS=П'ятизірковий
+
+# Типи трансферів
+transferType.BUS=Автобус
+transferType.TRAIN=Поїзд
+transferType.PLANE=Літак
+transferType.SHIP=Корабель
+transferType.PRIVATE_CAR=Приватне авто
+transferType.JEEPS=Джип
+transferType.MINIBUS=Мікроавтобус
+transferType.ELECTRICAL_CARS=Електроавтомобілі
+profile.edit.header=Редагування даних
+profile.firstName=Ім'я
+profile.lastName=Прізвище
+button.updateProfile=Зберегти зміни
+# Типи турів
+tourType.HEALTH=Оздоровчий
+tourType.SPORTS=Спортивний
+tourType.LEISURE=Відпочинковий
+tourType.SAFARI=Сафарі
+tourType.WINE=Винний
+tourType.ECO=Екологічний
+tourType.ADVENTURE=Пригодницький
+tourType.CULTURAL=Культурний
+voucher.arrival=Прибуття:
+voucher.eviction=Виїзд:
+
+voucher.label.hotel=Готель:
+voucher.label.transfer=Трансфер:
+voucher.label.tour=Тур:
+# Підписи форм і валідація
+username.label=Логін
+email.label=Електронна пошта
+password.label=Пароль
+password.confirm.label=Підтвердіть пароль
+role.label=Роль
+role.user=Користувач
+role.manager=Менеджер
+role.admin=Адміністратор
+phonenumber.label=Номер телефону
+phone.required=Номер телефону є обов’язковим.
+phone.invalid=Невірний формат номеру телефону.
+button.submit=Надіслати
+button.register=Зареєструватися
+button.home=Головна
 
 # Бізнес-валидація
 username.exists=Логін вже зайнятий.
 email.exists=Електронна пошта вже використовується.
 password.mismatch=Паролі не співпадають.
 phone.exists=Номер телефону вже використовується.
-
+voucher.hot.badge=Гаряче
 # Панель керування
 dashboard.title=Тревел Агенція
 dashboard.nav.brand=Панель керування
@@ -84,3 +133,7 @@ error.500.message=Щось пішло не так на нашому сервер
 error.default.title=Помилка
 error.default.message=Сталася несподівана помилка. Будь ласка, спробуйте пізніше.
 error.default.backHome=Повернутись на головну
+
+# Каталог ваучерів
+voucher.catalog.header=Доступні Ваучери
+voucher.catalog.empty=Наразі ваучери відсутні.
