+Filter(Full function);

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,7 +27,8 @@ profile.table.balance=Balance
 voucher.filter.header=Filter Vouchers
 voucher.filter.tourType=Tour Type
 voucher.filter.transferType=Transfer Type
-voucher.filter.price=Price ($)
+voucher.filter.minPrice=Min Price
+voucher.filter.maxPrice=Max Price
 voucher.filter.hotelType=Hotel Type
 voucher.filter.all=All
 voucher.filter.button=Filter
