--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -32,13 +32,13 @@ profile.orders.date=Дата
 profile.orders.status=Статус
 profile.orders.total=Загальна сума
 
-# Форма фільтрації ваучерів
-voucher.filter.header=Фільтр Ваучерів
+voucher.filter.header=Фільтр ваучерів
 voucher.filter.tourType=Тип туру
 voucher.filter.transferType=Тип трансферу
-voucher.filter.price=Ціна ($)
+voucher.filter.minPrice=Мінімальна ціна
+voucher.filter.maxPrice=Максимальна ціна
 voucher.filter.hotelType=Тип готелю
-voucher.filter.all=Всі
+voucher.filter.all=Усі
 voucher.filter.button=Фільтрувати
 
 # Кнопки на картках ваучерів
