Manager functionality added

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,10 +39,37 @@ voucher.label.tour=Tour:
 voucher.hot.badge=Hot
 
 # Voucher Card Buttons
-button.view=Review
 button.order=Order
 button.notAvailable=Registration period ended
 
+dashboard.nav.manager=Manager Panel
+
+# manager panel
+manager.title=Manager Panel
+manager.header=Voucher Management Panel
+manager.subheader=Modify voucher labels and promotions
+manager.table.header=All Vouchers
+
+# voucher table columns
+voucher.title=Title
+voucher.price=Price
+voucher.date=Dates
+voucher.status=Status
+voucher.hot=HOT
+voucher.actions=Actions
+
+# voucher status values
+voucher.status.REGISTERED=Registered
+voucher.status.PAID=Paid
+voucher.status.CANCELED=Canceled
+
+# buttons
+button.setHot=Set HOT
+button.unsetHot=Unset HOT
+button.update=Update
+button.view=View
+button.managerPanel=Manager Panel
+button.actions=Change status
 
 
 # Tour Types
