--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -53,6 +53,32 @@ hotelType.THREE_STARS=Трьохзірковий
 hotelType.FOUR_STARS=Чотиризірковий
 hotelType.FIVE_STARS=П'ятизірковий
 
+# manager panel
+manager.title=Панель менеджера
+manager.header=Панель керування ваучерами
+manager.subheader=Змінюйте статус та акційні мітки ваучерів
+manager.table.header=Усі ваучери
+
+# voucher table columns
+voucher.title=Назва
+voucher.price=Ціна
+voucher.date=Дати
+voucher.status=Статус
+voucher.hot=Гаряче
+voucher.actions=Дії
+dashboard.nav.manager=Панель менеджера
+# voucher status values
+voucher.status.REGISTERED=Зареєстровано
+voucher.status.PAID=Оплачено
+voucher.status.CANCELED=Скасовано
+
+# buttons
+button.setHot=Встановити Гаряче
+button.unsetHot=Зняти Гаряче
+button.update=Оновити
+button.managerPanel=Панель менеджера
+button.actions=Змінити статус
+
 # Типи трансферів
 transferType.BUS=Автобус
 transferType.TRAIN=Поїзд
