Admin functionality added (Manager`s copy)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -101,6 +101,13 @@ hotelType.THREE_STARS=Three Stars
 hotelType.FOUR_STARS=Four Stars
 hotelType.FIVE_STARS=Five Stars
 
+# messages.properties
+admin.title=Admin Panel
+admin.header=Admin Voucher Management
+admin.subheader=Same tools as Manager
+admin.table.header=All Vouchers
+dashboard.nav.admin=Admin Panel
+
 
 # Orders section
 profile.title=My profile
