--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -104,6 +104,14 @@ tourType.CULTURAL=Культурний
 voucher.arrival=Прибуття:
 voucher.eviction=Виїзд:
 
+# messages_uk.properties
+admin.title=Панель адміна
+admin.header=Керування ваучерами (Admin)
+admin.subheader=Ті самі інструменти, що у менеджера
+admin.table.header=Усі ваучери
+dashboard.nav.admin=Панель адміна
+
+
 voucher.label.hotel=Готель:
 voucher.label.transfer=Трансфер:
 voucher.label.tour=Тур:
