Admin functionality added (Role changer)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,21 @@
+# Index / Home
+index.nav.brand=Travel Agency
+index.nav.home=Home
+home.title=Travel Agency Beyond the Horizon!
+home.nav.brand=Travel Agency
+home.nav.home=Home
+home.header=Welcome to Our Travel Agency Beyond the Horizon!
+home.description=Explore incredible journeys and start your adventure today.
+
+# Dashboard
+dashboard.title=Travel Agency
+dashboard.header=Travel Agency
+dashboard.nav.brand=Travel Agency
+dashboard.nav.manager=Manager Panel
+dashboard.nav.admin=Admin Panel
+dashboard.home=Dashboard
+
 # Buttons
-sign.in.title=Sign In
-sign.in.header=Sign In
-sign.up.title=Sign Up
-sign.up.header=Sign Up
 button.signin=Sign In
 button.signup=Sign Up
 button.profile=My Profile
@@ -14,157 +27,51 @@ button.language=Language
 button.lang.en=EN
 button.lang.uk=UK
 button.myProfile=My Profile
-
-
-# Table labels for user info
-profile.table.username=Username
-profile.table.email=Email
-profile.table.phone=Phone
-profile.table.role=Role
-profile.table.balance=Balance
-
-# Voucher Filter Form
-voucher.filter.header=Filter Vouchers
-voucher.filter.tourType=Tour Type
-voucher.filter.transferType=Transfer Type
-voucher.filter.minPrice=Min Price
-voucher.filter.maxPrice=Max Price
-voucher.filter.hotelType=Hotel Type
-voucher.filter.all=All
-voucher.filter.button=Filter
-
-voucher.label.hotel=Hotel:
-voucher.label.transfer=Transfer:
-voucher.label.tour=Tour:
-voucher.hot.badge=Hot
-
-# Voucher Card Buttons
 button.order=Order
 button.notAvailable=Registration period ended
-
-dashboard.nav.manager=Manager Panel
-
-# manager panel
-manager.title=Manager Panel
-manager.header=Voucher Management Panel
-manager.subheader=Modify voucher labels and promotions
-manager.table.header=All Vouchers
-
-# voucher table columns
-voucher.title=Title
-voucher.price=Price
-voucher.date=Dates
-voucher.status=Status
-voucher.hot=HOT
-voucher.actions=Actions
-
-# voucher status values
-voucher.status.REGISTERED=Registered
-voucher.status.PAID=Paid
-voucher.status.CANCELED=Canceled
-
-# buttons
+button.pay=Pay
+button.cancel=Cancel
 button.setHot=Set HOT
 button.unsetHot=Unset HOT
 button.update=Update
 button.view=View
 button.managerPanel=Manager Panel
 button.actions=Change status
+button.submit=Submit
+button.register=Register
+button.home=Home
+button.updateProfile=Update Profile
+button.topup=Top Up
 
-
-# Tour Types
-tourType.HEALTH=Health
-tourType.SPORTS=Sports
-tourType.LEISURE=Leisure
-tourType.SAFARI=Safari
-tourType.WINE=Wine
-tourType.ECO=Eco
-tourType.ADVENTURE=Adventure
-tourType.CULTURAL=Cultural
-
-
-# Transfer Types
-transferType.BUS=Bus
-transferType.TRAIN=Train
-transferType.PLANE=Plane
-transferType.SHIP=Ship
-transferType.PRIVATE_CAR=Private Car
-transferType.JEEPS=Jeep
-transferType.MINIBUS=Minibus
-transferType.ELECTRICAL_CARS=Electrical Cars
-
-
-# Hotel Types
-hotelType.ONE_STAR=One Star
-hotelType.TWO_STARS=Two Stars
-hotelType.THREE_STARS=Three Stars
-hotelType.FOUR_STARS=Four Stars
-hotelType.FIVE_STARS=Five Stars
-
-# messages.properties
-admin.title=Admin Panel
-admin.header=Admin Voucher Management
-admin.subheader=Same tools as Manager
-admin.table.header=All Vouchers
-dashboard.nav.admin=Admin Panel
-
-
-# Orders section
-profile.title=My profile
-profile.header=My profile
-profile.orders.header=My Orders
-profile.orders.id=Order ID
-profile.orders.voucherTitle=Voucher
-profile.orders.date=Date
-profile.orders.status=Status
-profile.orders.total=Total Price
+# Auth Titles
+sign.in.title=Sign In
+sign.in.header=Sign In
+sign.up.title=Sign Up
+sign.up.header=Sign Up
 
 # Form labels & validation
 username.label=Username
 email.label=Email
 password.label=Password
 password.confirm.label=Confirm Password
+phonenumber.label=Phone Number
+phone.required=Phone number is required.
+phone.invalid=Invalid phone number format.
+
+# Role labels
 role.label=Role
 role.user=User
 role.manager=Manager
 role.admin=Administrator
-phonenumber.label=Phone Number
-phone.required=Phone number is required.
-phone.invalid=Invalid phone number format.
-button.submit=Submit
-button.register=Register
-button.home=Home
+role.USER=User
+role.MANAGER=Manager
+role.ADMIN=Admin
 
 # Business errors
 username.exists=Username is already taken.
 email.exists=Email is already registered.
 password.mismatch=Passwords do not match.
 phone.exists=Phone number is already in use.
-voucher.arrival=Arrival:
-voucher.eviction=Eviction:
-
-# Dashboard
-dashboard.title=Travel Agency
-dashboard.nav.brand=Travel Agency
-dashboard.header=Travel Agency
-voucher.table.id=ID
-voucher.table.title=Voucher Title
-voucher.table.description=Description
-voucher.table.action=Action
-voucher.sample.title=Featured Voucher
-voucher.sample.description=Discover exclusive offers and unique experiences.
-profile.edit.header=Edit Your Details
-profile.firstName=First Name
-profile.lastName=Last Name
-button.updateProfile=Update Profile
-# Index / Home
-index.nav.brand=Travel Agency
-index.nav.home=Home
-home.title=Travel Agency Beyond the Horizon!
-home.nav.brand=Travel Agency
-home.nav.home=Home
-home.header=Welcome to Our Travel Agency Beyond the Horizon!
-home.description=Explore incredible journeys and start your adventure today.
 
 # Error pages
 error.404.title=Page Not Found
@@ -180,3 +87,138 @@ error.default.backHome=Back to Home
 # Voucher Catalog
 voucher.catalog.header=Available Vouchers
 voucher.catalog.empty=No vouchers available at the moment.
+
+# Voucher Filter Form
+voucher.filter.header=Filter Vouchers
+voucher.filter.tourType=Tour Type
+voucher.filter.transferType=Transfer Type
+voucher.filter.minPrice=Min Price
+voucher.filter.maxPrice=Max Price
+voucher.filter.hotelType=Hotel Type
+voucher.filter.all=All
+voucher.filter.button=Filter
+
+# Voucher Labels
+voucher.label.hotel=Hotel:
+voucher.label.transfer=Transfer:
+voucher.label.tour=Tour:
+voucher.hot.badge=Hot
+voucher.arrival=Arrival:
+voucher.eviction=Eviction:
+
+# Voucher Table
+voucher.table.id=ID
+voucher.table.title=Voucher Title
+voucher.table.description=Description
+voucher.table.action=Action
+voucher.title=Title
+voucher.price=Price
+voucher.date=Dates
+voucher.status=Status
+voucher.hot=HOT
+voucher.actions=Actions
+
+# Voucher Status Values
+voucher.status.REGISTERED=Registered
+voucher.status.PAID=Paid
+voucher.status.CANCELED=Canceled
+
+# Voucher Sample Block
+voucher.sample.title=Featured Voucher
+voucher.sample.description=Discover exclusive offers and unique experiences.
+
+# Tour Types
+tourType.HEALTH=Health
+tourType.SPORTS=Sports
+tourType.LEISURE=Leisure
+tourType.SAFARI=Safari
+tourType.WINE=Wine
+tourType.ECO=Eco
+tourType.ADVENTURE=Adventure
+tourType.CULTURAL=Cultural
+
+# Transfer Types
+transferType.BUS=Bus
+transferType.TRAIN=Train
+transferType.PLANE=Plane
+transferType.SHIP=Ship
+transferType.PRIVATE_CAR=Private Car
+transferType.JEEPS=Jeep
+transferType.MINIBUS=Minibus
+transferType.ELECTRICAL_CARS=Electrical Cars
+
+# Hotel Types
+hotelType.ONE_STAR=One Star
+hotelType.TWO_STARS=Two Stars
+hotelType.THREE_STARS=Three Stars
+hotelType.FOUR_STARS=Four Stars
+hotelType.FIVE_STARS=Five Stars
+
+# Profile Page
+profile.title=My profile
+profile.header=My profile
+profile.username=Username
+profile.email=Email
+profile.phone=Phone
+profile.role=Role
+profile.balance=Balance
+profile.table.username=Username
+profile.table.email=Email
+profile.table.phone=Phone
+profile.table.role=Role
+profile.table.balance=Balance
+profile.edit.header=Edit Your Details
+profile.firstName=First Name
+profile.lastName=Last Name
+
+# Balance Top-up
+profile.topup.header=Top Up Balance
+profile.topup.placeholder=Enter amount
+
+# Orders section
+profile.orders.header=My Orders
+profile.orders.id=Order ID
+profile.orders.voucherTitle=Voucher
+profile.orders.date=Date
+profile.orders.status=Status
+profile.orders.total=Total Price
+profile.orders.insufficient=Insufficient funds
+profile.orders.canceled=Canceled
+
+# Order Table Columns
+order.voucher=Voucher
+order.date=Date
+order.status=Status
+order.status.created=Created
+order.status.confirmed=Confirmed
+order.status.canceled=Canceled
+order.totalPrice=Total Price
+order.payment=Payment
+
+# Manager Panel
+manager.title=Manager Panel
+manager.header=Voucher Management Panel
+manager.subheader=Modify voucher labels and promotions
+manager.table.header=All Vouchers
+
+# Admin Panel
+admin.title=Admin Panel
+admin.header=Admin Voucher Management
+admin.subheader=Same tools as Manager
+admin.table.header=All Vouchers
+
+
+# Admin – User Management
+admin.users.header=User Management
+admin.users.username=Username
+admin.users.roles=Roles
+admin.users.status=Status
+admin.users.block=Block
+admin.users.unblock=Unblock
+admin.users.blocked=Blocked
+admin.users.active=Active
+admin.users.actions=Actions
+admin.users.changeRole=Change
+admin.users.changeRoleHeader=Change Role
+
+button.updateRole=Update Role
