--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,3 +1,20 @@
+# Головна сторінка
+index.nav.brand=Тревел Агенція
+index.nav.home=Головна
+home.title=Тревел Агенція Світ за горизонтом!
+home.nav.brand=Тревел Агенція
+home.nav.home=Головна
+home.header=Вітаємо у нашій Тревел Агенції Світ за горизонтом!
+home.description=Відкрийте для себе неймовірні подорожі та розпочніть свою пригоду сьогодні.
+
+# Панель керування
+dashboard.title=Тревел Агенція
+dashboard.header=Панель керування
+dashboard.nav.brand=Панель керування
+dashboard.nav.manager=Панель менеджера
+dashboard.nav.admin=Панель адміна
+dashboard.home=Головна
+
 # Кнопки
 sign.in.title=Авторизація
 sign.in.header=Авторизація
@@ -14,70 +31,83 @@ button.language=Мова
 button.lang.en=EN
 button.lang.uk=UK
 button.myProfile=Мій профіль
-
-# Підписи таблиці з інформацією про користувача
-profile.title=Мій профіль
-profile.header=Мій профіль
-profile.table.username=Логін
-profile.table.email=Електронна пошта
-profile.table.phone=Номер телефону
-profile.table.role=Роль
-profile.table.balance=Баланс
-
-# Розділ замовлень
-profile.orders.header=Мої замовлення
-profile.orders.id=ID замовлення
-profile.orders.voucherTitle=Ваучер
-profile.orders.date=Дата
-profile.orders.status=Статус
-profile.orders.total=Загальна сума
-
-voucher.filter.header=Фільтр ваучерів
-voucher.filter.tourType=Тип туру
-voucher.filter.transferType=Тип трансферу
-voucher.filter.minPrice=Мінімальна ціна
-voucher.filter.maxPrice=Максимальна ціна
-voucher.filter.hotelType=Тип готелю
-voucher.filter.all=Усі
-voucher.filter.button=Фільтрувати
-
-# Кнопки на картках ваучерів
 button.view=Переглянути
 button.order=Замовити
 button.notAvailable=Реєстрацію завершено
+button.setHot=Встановити Гаряче
+button.unsetHot=Зняти Гаряче
+button.update=Оновити
+button.managerPanel=Панель менеджера
+button.actions=Змінити статус
+button.submit=Надіслати
+button.register=Зареєструватися
+button.home=Головна
+button.pay=Оплатити
+button.cancel=Скасувати
+button.updateProfile=Зберегти зміни
 
-# Типи готелів
-hotelType.ONE_STAR=Однозірковий
-hotelType.TWO_STARS=Двозірковий
-hotelType.THREE_STARS=Трьохзірковий
-hotelType.FOUR_STARS=Чотиризірковий
-hotelType.FIVE_STARS=П'ятизірковий
+# Каталог ваучерів
+voucher.catalog.header=Доступні Ваучери
+voucher.catalog.empty=Наразі ваучери відсутні.
+voucher.sample.title=Рекомендований ваучер
+voucher.sample.description=Відкрийте для себе унікальні пропозиції та незабутні враження.
+voucher.hot.badge=Гаряче
+voucher.arrival=Прибуття:
+voucher.eviction=Виїзд:
+voucher.label.hotel=Готель:
+voucher.label.transfer=Трансфер:
+voucher.label.tour=Тур:
 
-# manager panel
-manager.title=Панель менеджера
-manager.header=Панель керування ваучерами
-manager.subheader=Змінюйте статус та акційні мітки ваучерів
-manager.table.header=Усі ваучери
-
-# voucher table columns
+# Таблиця ваучерів
+voucher.table.id=ID
+voucher.table.title=Назва ваучера
+voucher.table.description=Опис
+voucher.table.action=Дія
 voucher.title=Назва
 voucher.price=Ціна
 voucher.date=Дати
 voucher.status=Статус
 voucher.hot=Гаряче
 voucher.actions=Дії
-dashboard.nav.manager=Панель менеджера
-# voucher status values
 voucher.status.REGISTERED=Зареєстровано
 voucher.status.PAID=Оплачено
 voucher.status.CANCELED=Скасовано
 
-# buttons
-button.setHot=Встановити Гаряче
-button.unsetHot=Зняти Гаряче
-button.update=Оновити
-button.managerPanel=Панель менеджера
-button.actions=Змінити статус
+# Панель менеджера
+manager.title=Панель менеджера
+manager.header=Панель керування ваучерами
+manager.subheader=Змінюйте статус та акційні мітки ваучерів
+manager.table.header=Усі ваучери
+
+# Панель адміністратора
+admin.title=Панель адміна
+admin.header=Керування ваучерами (Admin)
+admin.subheader=Ті самі інструменти, що у менеджера
+admin.table.header=Усі ваучери
+admin.users.header=Керування користувачами
+admin.users.username=Логін
+admin.users.roles=Ролі
+admin.users.status=Статус
+admin.users.block=Заблокувати
+admin.users.unblock=Розблокувати
+admin.users.blocked=Заблоковано
+admin.users.active=Активний
+admin.users.actions=Дії
+admin.users.changeRole=Змінити
+admin.users.changeRoleHeader=Змінити роль
+
+button.updateRole=Змінити роль
+
+
+# Типи турів
+tourType.HEALTH=Оздоровчий
+tourType.SPORTS=Спортивний
+tourType.LEISURE=Відпочинковий
+tourType.SAFARI=Сафарі
+tourType.WINE=Винний
+tourType.ECO=Екологічний
+tourType.ADVENTURE=Пригодницький
+tourType.CULTURAL=Культурний
 
 # Типи трансферів
 transferType.BUS=Автобус
@@ -88,34 +118,63 @@ transferType.PRIVATE_CAR=Приватне авто
 transferType.JEEPS=Джип
 transferType.MINIBUS=Мікроавтобус
 transferType.ELECTRICAL_CARS=Електроавтомобілі
+
+# Типи готелів
+hotelType.ONE_STAR=Однозірковий
+hotelType.TWO_STARS=Двозірковий
+hotelType.THREE_STARS=Трьохзірковий
+hotelType.FOUR_STARS=Чотиризірковий
+hotelType.FIVE_STARS=П'ятизірковий
+
+# Фільтр ваучерів
+voucher.filter.header=Фільтр ваучерів
+voucher.filter.tourType=Тип туру
+voucher.filter.transferType=Тип трансферу
+voucher.filter.minPrice=Мінімальна ціна
+voucher.filter.maxPrice=Максимальна ціна
+voucher.filter.hotelType=Тип готелю
+voucher.filter.all=Усі
+voucher.filter.button=Фільтрувати
+
+# Профіль
+profile.title=Мій профіль
+profile.header=Мій профіль
+profile.username=Логін
+profile.email=Електронна пошта
+profile.phone=Телефон
+profile.role=Роль
+profile.balance=Баланс
+profile.table.username=Логін
+profile.table.email=Електронна пошта
+profile.table.phone=Номер телефону
+profile.table.role=Роль
+profile.table.balance=Баланс
 profile.edit.header=Редагування даних
 profile.firstName=Ім'я
 profile.lastName=Прізвище
-button.updateProfile=Зберегти зміни
-# Типи турів
-tourType.HEALTH=Оздоровчий
-tourType.SPORTS=Спортивний
-tourType.LEISURE=Відпочинковий
-tourType.SAFARI=Сафарі
-tourType.WINE=Винний
-tourType.ECO=Екологічний
-tourType.ADVENTURE=Пригодницький
-tourType.CULTURAL=Культурний
-voucher.arrival=Прибуття:
-voucher.eviction=Виїзд:
+profile.topup.header=Поповнити баланс
+profile.topup.placeholder=Введіть суму
+profile.topup.button=Поповнити
 
-# messages_uk.properties
-admin.title=Панель адміна
-admin.header=Керування ваучерами (Admin)
-admin.subheader=Ті самі інструменти, що у менеджера
-admin.table.header=Усі ваучери
-dashboard.nav.admin=Панель адміна
+# Замовлення
+profile.orders.header=Мої замовлення
+profile.orders.id=ID замовлення
+profile.orders.voucherTitle=Ваучер
+profile.orders.date=Дата
+profile.orders.status=Статус
+profile.orders.total=Загальна сума
+profile.orders.insufficient=Недостатньо коштів
+profile.orders.canceled=Скасовано
+order.voucher=Ваучер
+order.date=Дата
+order.status=Статус
+order.status.created=Створено
+order.status.confirmed=Підтверджено
+order.status.canceled=Скасовано
+order.totalPrice=Загальна сума
+order.payment=Оплата
 
-
-voucher.label.hotel=Готель:
-voucher.label.transfer=Трансфер:
-voucher.label.tour=Тур:
-# Підписи форм і валідація
+# Валідація та форма
 username.label=Логін
 email.label=Електронна пошта
 password.label=Пароль
@@ -127,35 +186,17 @@ role.admin=Адміністратор
 phonenumber.label=Номер телефону
 phone.required=Номер телефону є обов’язковим.
 phone.invalid=Невірний формат номеру телефону.
-button.submit=Надіслати
-button.register=Зареєструватися
-button.home=Головна
 
 # Бізнес-валидація
 username.exists=Логін вже зайнятий.
 email.exists=Електронна пошта вже використовується.
 password.mismatch=Паролі не співпадають.
 phone.exists=Номер телефону вже використовується.
-voucher.hot.badge=Гаряче
-# Панель керування
-dashboard.title=Тревел Агенція
-dashboard.nav.brand=Панель керування
-dashboard.header=Панель керування
-voucher.table.id=ID
-voucher.table.title=Назва ваучера
-voucher.table.description=Опис
-voucher.table.action=Дія
-voucher.sample.title=Рекомендований ваучер
-voucher.sample.description=Відкрийте для себе унікальні пропозиції та незабутні враження.
 
-# Головна сторінка
-index.nav.brand=Тревел Агенція
-index.nav.home=Головна
-home.title=Тревел Агенція Світ за горизонтом!
-home.nav.brand=Тревел Агенція
-home.nav.home=Головна
-home.header=Вітаємо у нашій Тревел Агенції Світ за горизонтом!
-home.description=Відкрийте для себе неймовірні подорожі та розпочніть свою пригоду сьогодні.
+# Ролі
+role.USER=Користувач
+role.MANAGER=Менеджер
+role.ADMIN=Адмін
 
 # Сторінки помилок
 error.404.title=Сторінку не знайдено
@@ -167,7 +208,3 @@ error.500.message=Щось пішло не так на нашому сервер
 error.default.title=Помилка
 error.default.message=Сталася несподівана помилка. Будь ласка, спробуйте пізніше.
 error.default.backHome=Повернутись на головну
-
-# Каталог ваучерів
-voucher.catalog.header=Доступні Ваучери
-voucher.catalog.empty=Наразі ваучери відсутні.
